<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Général -->
    <string name="app_name">M.P.A.U.</string>
    <string name="main_title">Mon Profil Ambulancier Urgentiste</string>
    <string name="date">Date</string>
    <string name="time">Heure</string>
    <string name="miss_date">La date n\'est pas renseignée</string>
    <string name="miss_time">L\'heure n\'est pas renseignée</string>
    <string name="wrong_date_time">Date/Heure non valide</string>
    <string name="confirmation">Confirmation</string>
    <string name="ok">OK</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="save">Sauvegarder</string>
    <string name="delete">Supprimer</string>
    <string name="valid">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="three_pts">…</string>
    <string name="unknown">------</string>
    <string name="back_arrow">Flèche Retour</string>
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="twenty_five">25</string>
    <string name="thirty">30</string>
    <string name="forty_five">45</string>
    <string name="fifty">50</string>
    <string name="sixty">60</string>
    <string name="hundred">100</string>
    <string name="type_inter">Type de l\'intervention</string>
    <string name="subtype_inter">Sous-Type de l\'intervention</string>
    <string name="patient_age">Age du patient</string>
    <!-- Splashscreen-->
    <string name="logo">Logo</string>
    <!-- Offline -->
    <string name="title_offline_activity">MPAU - Hors ligne</string>
    <string name="offline">Vous n\'êtes pas connecté à Internet ou le service est actuellement indisponible, merci de ré-essayer ultérieurement.</string>
    <string name="retry">Ré-essayer</string>
    <string name="close">Fermer</string>
    <!-- Login -->
    <string name="title_login_activity">MPAU - Login</string>
    <string name="connection">Connexion</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="miss_username">Username manquant</string>
    <string name="miss_password">Password manquant</string>
    <string name="wrong_logins">Username/Password incorrect(s)</string>
    <!-- Home -->
    <string name="title_home_activity">MPAU - Accueil</string>
    <string name="connected">Connecté</string>
    <string name="mini_logo">Logo</string>
    <string name="welcome">Bienvenue</string>
    <string name="logout">Déconnexion</string>
    <string name="timer">Timer</string>
    <string name="timer_running">en cours depuis le</string>
    <string name="timer_pausing">en pause depuis</string>
    <string name="start_timer">Commencer</string>
    <string name="pause_timer">Pause</string>
    <string name="restart_timer">Reprendre</string>
    <string name="finish_timer">Terminer</string>
    <string name="confirm_start">Commencer la journée le</string>
    <string name="confirm_pause">Mettre en pause le</string>
    <string name="confirm_restart">Reprendre le</string>
    <string name="confirm_finish">Terminer la journée le</string>
    <string name="at">à</string>
    <string name="start_timer_msg">Début de journée</string>
    <string name="pause_timer_msg">Pause</string>
    <string name="restart_timer_msg">Reprise</string>
    <string name="finish_timer_msg">Fin de journée</string>
    <string name="error_start">Erreur lors du lancement de la journée</string>
    <string name="error_pause">Erreur lors du lancement de la pause</string>
    <string name="error_restart">Erreur lors du lancement de la reprise</string>
    <string name="error_finish">Erreur lors de la clôture de la journée</string>
    <string name="unknown_mode">Mode indéterminé. Veuillez vérifier sur le site Web ou contacter l\'administrateur.</string>
    <string name="view_timers">Mes relevés</string>
    <string name="interventions">Interventions</string>
    <string name="view_interventions">Mes interventions</string>
    <string name="confirm_logout">Déconnexion de l\'utilisateur actuel ?</string>
    <!-- View Timers -->
    <string name="title_view_timers_activity">MPAU - Mes relevés</string>
    <string name="view_timers_title">Mes relevés</string>
    <string name="select_month">Sélection du mois :</string>
    <string name="no_saved_timer">Vous n\'avez actuellement aucune période de travail enregistrée pour le mois sélectionné.</string>
    <string name="day">Journée du</string>
    <string name="cumulated_hours">Total d\'heures cumulées :</string>
    <string name="confirm_delete_timer">Effacer le timer ?</string>
    <string name="deleted_timer">Timer effacé</string>
    <string name="error_delete_timer">Erreur lors de la suppression du timer</string>
    <string name="message_informations_timer">Liste les timers du mois sélectionné par ordre chronologique et calcul le temps de travail mensuel total</string>
    <string name="message_informations_timer_month">Sélectionne le mois</string>
    <string name="message_informations_timer_touch">(long) Supprime le timer</string>
    <!-- View Interventions -->
    <string name="title_view_interventions_activity">MPAU - Mes interventions</string>
    <string name="view_interventions_title">Mes interventions</string>
    <string name="smur_tag">  (SMUR)</string>
    <string name="add">Ajouter</string>
    <string name="options">Options</string>
    <string name="informations">Informations</string>
    <string name="message_informations_inter">Liste les interventions par ordre d\'insertion</string>
    <string name="message_informations_inter_add">Ajoute une intervention</string>
    <string name="message_informations_inter_options">Sélectionne le nombre d\'interventions par page</string>
    <string name="message_informations_inter_touch">Voir l\'intervention</string>
    <string name="no_saved_intervention">Vous n\'avez actuellement aucune intervention enregistrée.</string>
    <string name="previous_arrow">Page précédente</string>
    <string name="next_arrow">Page suivante</string>
    <string name="page">Page</string>
    <string name="inter_by_page">Interventions par page</string>
    <string name="message_inter_by_page">Nombre d\'interventions maximum par page</string>
    <string name="error_nav_inter">Erreur de navigation des pages d\'interventions</string>
    <!-- Add Intervention -->
    <string name="title_add_intervention_activity">MPAU - Nouvelle intervention</string>
    <string name="add_intervention_title">Nouvelle intervention</string>
    <string name="duration">Durée</string>
    <string name="complete_duration">Durée (en minutes)</string>
    <string name="duration_text">%1$d min</string>
    <string name="sector">Secteur</string>
    <string name="smur">SMUR</string>
    <string name="comment">Commentaire …</string>
    <string name="confirm_add_inter">Ajouter l\'intervention ?</string>
    <string name="added_inter">Intervention ajoutée</string>
    <string name="miss_duration">La durée n\'est pas renseignée</string>
    <string name="miss_sector">Le secteur n\'est pas renseigné</string>
    <string name="miss_type">Le type n\'est pas renseigné</string>
    <string name="miss_subtype">Le sous-type n\'est pas renseigné</string>
    <string name="miss_patient_age">L\'âge du patient n\'est pas renseigné</string>
    <string name="error_add_inter">Erreur lors de l\'ajout de l\'intervention</string>
    <!-- Modif Interventions -->
    <string name="title_modif_intervention_activity">MPAU - Mon intervention</string>
    <string name="modif_intervention_title">Mon intervention</string>
    <string name="modif_inter">Modifier</string>
    <string name="confirm_modif_inter">Modifier l\'intervention ?</string>
    <string name="modified_inter">Intervention modifiée</string>
    <string name="confirm_delete_inter">Effacer l\'intervention ?</string>
    <string name="deleted_inter">Intervention effacée</string>
    <string name="error_modify_inter">Erreur lors de la modification de l\'intervention</string>
    <string name="error_delete_inter">Erreur lors de la suppression de l\'intervention</string>
</resources>