<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleAlert"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/lighterblue"
        android:gravity="center"
        android:text="@string/inter_by_page"
        android:textColor="@color/lightblack"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_nb_inter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/radio_nb_inter_10"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@id/radio_nb_inter_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/ten"
            android:textColor="@color/lightergrey" />

        <RadioButton
            android:id="@+id/radio_nb_inter_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/twenty_five"
            android:textColor="@color/lightergrey" />

        <RadioButton
            android:id="@+id/radio_nb_inter_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/fifty"
            android:textColor="@color/lightergrey" />

        <RadioButton
            android:id="@+id/radio_nb_inter_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/hundred"
            android:textColor="@color/lightergrey" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alertBtnValid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_blue"
            android:minHeight="40dp"
            android:text="@string/valid"
            android:textColor="@color/lightblack" />

        <Button
            android:id="@+id/alertBtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_blue"
            android:minHeight="40dp"
            android:text="@string/cancel"
            android:textColor="@color/lightblack" />

    </LinearLayout>

</LinearLayout>