<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterblue"
    tools:context="fr.mpau.activity.AddInterventionActivity">

    <View
        android:id="@+id/lineOverControlsBloc"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/black" />

    <View
        android:id="@+id/interAnchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/lineOverControlsBloc"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/controlsBloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/interAnchor"
        android:background="@color/darkblue"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backArrowAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="3dp"
            android:background="@color/darkblue"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/button_arrow_left" />

        <TextView
            android:id="@+id/txtAddInter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/backArrowAdd"
            android:shadowColor="@color/black"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="1.2"
            android:text="@string/add_intervention_title"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSendInter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_orange"
            android:minHeight="25dp"
            android:text="@string/send_inter"
            android:textColor="@color/lightblack" />

    </RelativeLayout>

    <View
        android:id="@+id/lineUnderControlsBloc"
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:layout_below="@id/controlsBloc"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/blocInter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lineUnderControlsBloc"
        android:layout_margin="30dp"
        android:background="@layout/main_container"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="25dp">

        <android.support.v7.widget.ButtonBarLayout
            android:id="@+id/blocAddInterDateTimeDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addInterDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_blue"
                android:minHeight="30dp"
                android:text="@string/date"
                android:textColor="@color/lightblack" />

            <Button
                android:id="@+id/addInterTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/button_blue"
                android:minHeight="30dp"
                android:text="@string/time"
                android:textColor="@color/lightblack" />

            <Button
                android:id="@+id/addInterDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/button_blue"
                android:minHeight="30dp"
                android:text="@string/duration"
                android:textColor="@color/lightblack" />

        </android.support.v7.widget.ButtonBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/type_inter" />

        <Spinner
            android:id="@+id/listType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/blue"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/subtype_inter" />

        <Spinner
            android:id="@+id/listSubType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/blue"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/patient_age" />

        <Spinner
            android:id="@+id/listPatientAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/blue"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkSmur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/lightgrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/checkSmur"
                android:text="@string/smur" />

        </LinearLayout>

        <EditText
            android:id="@+id/sector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:width="220dp"
            android:gravity="center_horizontal"
            android:hint="@string/sector"
            android:inputType="text"
            android:textColor="@color/lightgrey"
            android:textColorHint="@color/lightgrey" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:gravity="top|start"
            android:hint="@string/comment"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="@color/lightgrey"
            android:textColorHint="@color/lightgrey" />

    </LinearLayout>

</RelativeLayout>
