<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterblue"
    tools:context="fr.mpau.activity.ViewInterventionsActivity">

    <View
        android:id="@+id/lineOverControlsBloc"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/controlsBloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineOverControlsBloc"
        android:background="@color/darkblue"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backArrowView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="3dp"
            android:background="@color/darkblue"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/button_arrow_left" />

        <TextView
            android:id="@+id/txtAddInter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/backArrowView"
            android:shadowColor="@color/black"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="1.2"
            android:text="@string/view_interventions_title"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/addInterView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_toStartOf="@+id/optionsView"
            android:background="@color/darkblue"
            android:contentDescription="@string/add"
            android:src="@drawable/add" />

        <ImageButton
            android:id="@+id/optionsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_toStartOf="@+id/informationsView"
            android:background="@color/darkblue"
            android:contentDescription="@string/options"
            android:src="@drawable/options" />

        <ImageButton
            android:id="@id/informationsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="3dp"
            android:background="@color/darkblue"
            android:contentDescription="@string/informations"
            android:src="@drawable/informations" />

    </RelativeLayout>

    <View
        android:id="@+id/lineUnderControlsBloc"
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:layout_below="@id/controlsBloc"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/blocViewInters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/blocPagination"
        android:layout_below="@id/lineUnderControlsBloc"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@layout/main_container"
        android:paddingBottom="25dp"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/textViewEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/no_saved_intervention" />

        <ListView
            android:id="@+id/listViewInter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@id/blocPagination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@layout/main_container"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/previousArrowPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@id/paginationText"
            android:background="@color/darkblue"
            android:contentDescription="@string/previous_arrow"
            android:src="@drawable/button_arrow_left" />

        <TextView
            android:id="@+id/paginationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/nextArrowPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/paginationText"
            android:background="@color/darkblue"
            android:contentDescription="@string/next_arrow"
            android:src="@drawable/button_arrow_right" />

    </RelativeLayout>

</RelativeLayout>