<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:theme="@style/CustomAlertDialog">

    <TextView
        android:id="@+id/titleAlert"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/lighterblue"
        android:gravity="center"
        android:text="@string/informations"
        android:textColor="@color/lightblack"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/messageInformations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/message_informations_inter"
            android:textColor="@color/lightergrey" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/message_informations_inter_add"
                android:src="@drawable/add" />

            <TextView
                android:id="@+id/textAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:text="@string/message_informations_inter_add"
                android:textColor="@color/lightergrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/message_informations_inter_options"
                android:src="@drawable/options" />

            <TextView
                android:id="@+id/textOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:text="@string/message_informations_inter_options"
                android:textColor="@color/lightergrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageTouch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/message_informations_inter_touch"
                android:src="@drawable/touch" />

            <TextView
                android:id="@+id/textTouch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:text="@string/message_informations_inter_touch"
                android:textColor="@color/lightergrey" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">

        <Button
            android:id="@+id/alertBtnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:text="@string/ok"
            android:textColor="@color/lightblack" />

    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>